--- a/ASP_3/Web.config
+++ b/ASP_3/Web.config
@@ -62,6 +62,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="LIMUPAStoreEntities" connectionString="metadata=res://*/Models.LifumaModel.csdl|res://*/Models.LifumaModel.ssdl|res://*/Models.LifumaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-LSLABTRQ;initial catalog=LIMUPAStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LIMUPAStoreEntities" connectionString="metadata=res://*/Models.LIMUPAModel.csdl|res://*/Models.LIMUPAModel.ssdl|res://*/Models.LIMUPAModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-LSLABTRQ;initial catalog=LIMUPAStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
