--- a/ASP_3/Web.config
+++ b/ASP_3/Web.config
@@ -62,6 +62,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="LIMUPAStoreEntities" connectionString="metadata=res://*/Models.LIMUPAModel.csdl|res://*/Models.LIMUPAModel.ssdl|res://*/Models.LIMUPAModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-LSLABTRQ;initial catalog=LIMUPAStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="LIMUPAStoreEntities" connectionString="metadata=res://*/Models.LIPUMAModel.csdl|res://*/Models.LIPUMAModel.ssdl|res://*/Models.LIPUMAModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-LSLABTRQ;initial catalog=LIMUPAStore;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
